Add google maps to events listings

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REDISCLOUD_URL = redis://rediscloud:swaUEgIUaiU0Kp6t@redis-19120.c9.us-east-1-4.ec2.cloud.redislabs.com:19120
+GOOGLE_API = AIzaSyAG-ySQ04kts2AnablMVVkD32vDu74jJ_4
